--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
     buildToolsVersion "25.0.1"
     defaultConfig {
         applicationId "com.restaurant.partnerapp"
-        minSdkVersion 17
+        minSdkVersion 23
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -71,7 +71,11 @@ dependencies {
     // RxJava
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
+
+    // Retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
 
     // RxLifecycle
     compile 'com.trello:rxlifecycle:0.4.0'
