--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,5 +96,10 @@ dependencies {
 
     testCompile 'org.amshove.kluent:kluent:1.14'
 
+    // Gson
     compile 'com.google.code.gson:gson:2.2.+'
+
+    // RecyclerView
+    compile 'com.android.support:cardview-v7:25.0.+'
+    compile 'com.android.support:recyclerview-v7:25.0.+'
 }
