--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,4 +102,7 @@ dependencies {
     // RecyclerView
     compile 'com.android.support:cardview-v7:25.0.+'
     compile 'com.android.support:recyclerview-v7:25.0.+'
+
+    // SQLBrite
+    compile 'com.squareup.sqlbrite:sqlbrite:1.1.1'
 }
