--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,4 +108,7 @@ dependencies {
 
     // Stetho
     compile 'com.facebook.stetho:stetho:1.4.2'
+
+    // Job Dispatcher
+    compile 'com.firebase:firebase-jobdispatcher:0.5.2'
 }
