--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".customer.ui.CustomerListActivity">
+        <activity
+            android:name=".customer.ui.CustomerListActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".tables.ui.TableListActivity">
-
-        </activity>
+        <activity
+            android:name=".tables.ui.TableListActivity"
+            android:screenOrientation="portrait"></activity>
 
         <service
             android:name=".ClearReservationsService"
