--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,10 +59,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     // Mockito
-    testCompile "org.mockito:mockito-all:1.10.19"
-    testCompile "org.hamcrest:hamcrest-all:1.3"
-    testCompile("org.powermock:powermock-module-junit4:1.6.2")
-    testCompile("org.powermock:powermock-api-mockito:1.6.2")
+    androidTestCompile 'com.linkedin.dexmaker:dexmaker-mockito:2.2.0'
+//    testCompile "org.mockito:mockito-all:1.10.19"
+//    testCompile "org.hamcrest:hamcrest-all:1.3"
+//    testCompile("org.powermock:powermock-module-junit4:1.6.2")
+//    testCompile("org.powermock:powermock-api-mockito:1.6.2")
 
     // Butterknife
     compile 'com.jakewharton:butterknife:8.4.0'
